# R2.1

./: .gitignore  CMakeLists.txt  README.md  app.xml
include/R2/: Application.h  AssetManager.h  Billboard.h  Camera.h  Config.h  Imgui.h  Imguizmo.h  Input.h  Light.h  Mesh.h  MeshGroup.h  Model.h  Raycast.h  Renderer.h  Scene.h  SceneManager.h  Texture.h  Utils.h
include/R2/scenes/: TestScene.h  TestScene2.h
include/R2/shader/: EBO.h  Shader.h  VAO.h  VBO.h
include/glad/: glad.h
lib/: assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
resources/: terrain.mtl  testcube.mtl  untitled.mtl
shaders/billboard/: billboard.frag  billboard.vert
shaders/default/: default.frag  default.vert
shaders/line/: line.vert
shaders/pointShadow/: pointShadow.frag  pointShadow.geom  pointShadow.vert
shaders/shadow/: shadow.frag  shadow.vert
src/: Application.cpp  AssetManager.cpp  Billboard.cpp  Camera.cpp  Config.cpp  Core.cpp  Imgui.cpp  Imguizmo.cpp  Input.cpp  Light.cpp  Mesh.cpp  MeshGroup.cpp  Model.cpp  Raycast.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Texture.cpp  Utils.cpp
src/glad/: glad.c
src/imguizmo/: GraphEditor.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
src/scenes/: TestScene.cpp  TestScene2.cpp
src/shader/: EBO.cpp  Shader.cpp  VAO.cpp  VBO.cpp
src/wai/: whereami.c
